ola-parser/src/testdata/syntaxTests/specialFunctions/abidecode/abi_decode_calldata.sol
// This restriction might be lifted in the future
contract C {
  fn f() public pure {
    abi.decode("abc", (bytes calldata));
  }
}
// ----
// ParserError 2314: (121-129): Expected ',' but got 'calldata'
